first section almost done

--- a/index.html
+++ b/index.html
@@ -29,11 +29,21 @@
             </ul>
           </nav>
           <div class="sign-menu">
-            <a href=""><button>SIGN IN</button></a>
-            <a href=""><button>SIGN UP</button></a>
+            <a href=""><button id="sign-in-button">SIGN IN</button></a>
+            <a href=""><button id="sign-up-button">SIGN UP</button></a>
           </div>
         </div>
       </header>
+      <section id="first-section">
+        <div class="first-section-info">
+          <h1>Many reasons to get up and start to get back in the business</h1>
+          <p>The harder you work for something, the greater you'll feel when you achieve it.</p>
+          <button>LEARN MORE</button>
+          <button>DEMO</button>
+        </div>
+        <img src="images/running-man.png" alt="" id="running-man">
+      </section>
+      <div class="sponsors"></div>
     </div>
 
   </body>
