second section done

--- a/index.html
+++ b/index.html
@@ -38,12 +38,100 @@
         <div class="first-section-info">
           <h1>Many reasons to get up and start to get back in the business</h1>
           <p>The harder you work for something, the greater you'll feel when you achieve it.</p>
-          <button>LEARN MORE</button>
-          <button>DEMO</button>
+          <button id="learn-more-button">LEARN MORE</button>
+          <button id="demo-button">DEMO</button>
+          <div class="video-preview">
+            <iframe width="140" height="80" src="https://www.youtube.com/embed/5qap5aO4i9A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <div class="video-preview-description">
+              <p>The harder you work for something, the greater you'll feel when you achieve it.</p>
+              <a href="">Watch preview</a>
+            </div>
+          </div>
         </div>
         <img src="images/running-man.png" alt="" id="running-man">
+        <div class="sponsors">
+          <ul>
+            <li><img src="images/sponsor6.svg" alt=""></li>
+            <li><img src="images/sponsor5.svg" alt=""></li>
+            <li><img src="images/sponsor4.svg" alt=""></li>
+            <li><img src="images/sponsor3.svg" alt=""></li>
+            <li><img src="images/sponsor2.svg" alt=""></li>
+            <li><img src="images/sponsor1.svg" alt=""></li>
+          </ul>
+        </div>
       </section>
-      <div class="sponsors"></div>
+      <section id="second-section">
+        <h1 class="centered">Your choise</h1>
+        <p class="centered">There are many reasons to get down and start to get depressed about your situation.</p>
+        <ul>
+          <li>
+            <div class="feature-item">
+              <div class="icon-column">
+                <img src="images\Flip-horizontal.png" alt="">
+              </div>
+              <div>
+                <h2>Ecstatic elegance</h2>
+                <p>Article nor prepare chicken you him now. Shy merits say advice ten before lovers innate add.</p>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="feature-item">
+              <div class="icon-column">
+                <img src="images\Airpods.png" alt="">
+              </div>
+              <div>
+                <h2>Folly words widow</h2>
+                <p>Effect if in up no depend seemed. Ecstatic elegance gay but disposed. We me rent been part what.</p>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="feature-item">
+              <div class="icon-column">
+                <img src="images\LTE.png" alt="">
+              </div>
+              <div>
+                <h2>Possible procured trifling</h2>
+                <p>We me rent been part what. An concluded sportsman offending so provision mr education.</p>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="feature-item">
+              <div class="icon-column">
+                <img src="images\Thunder-move.png" alt="">
+              </div>
+              <div>
+                <h2>Open game</h2>
+                <p>Shy merits say advice ten before lovers innate add. She cordially behaviour can attempted estimable.</p>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="feature-item">
+              <div class="icon-column">
+                <img src="images\Attachment.png" alt="">
+              </div>
+              <div>
+                <h2>Endeavor</h2>
+                <p>Improve ashamed married expense bed her comfort pursuit mrs. Four time took ye your as fail lady.</p>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="feature-item">
+              <div class="icon-column">
+                <img src="images\Bulb.png" alt="">
+              </div>
+              <div>
+                <h2>Comfort pursuit</h2>
+                <p>Had denoting properly jointure you occasion directly raillery. In said to of poor full be post face snug.</p>
+              </div>
+            </div>
+          </li>
+        </ul>
+      </section>
     </div>
 
   </body>
