Naming after BEM methodology

--- a/index2.html
+++ b/index2.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <div class="main-container">
-      <header>
+      <header class="header">
         <div class="logo">
           <a href="#">
             <img src="images/logo.svg" alt="logo" width="36px" height="36px">
@@ -34,16 +34,16 @@
           </div>
         </div>
       </header>
-      <section id="section-1">
-        <div class="first-section-info">
-          <h1>Many reasons to get up and start to get back in the business</h1>
-          <p>The harder you work for something, the greater you'll feel when you achieve it.</p>
-          <button id="learn-more-button">LEARN MORE</button>
-          <button id="demo-button">DEMO</button>
-          <div class="video-preview">
+      <section class="section-1">
+        <div class="section-1__info">
+          <h1 class="heading section-1__header">Many reasons to get up and start to get back in the business</h1>
+          <p class="text section-1__text">The harder you work for something, the greater you'll feel when you achieve it.</p>
+          <button class="button section-1__button button_orange">LEARN MORE</button>
+          <button class="button section-1__button button_transparent">DEMO</button>
+          <div class="section-1__video-preview">
             <iframe width="140" height="80" src="https://www.youtube.com/embed/5qap5aO4i9A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <div class="video-preview-description">
-              <p>The harder you work for something, the greater you'll feel when you achieve it.</p>
+            <div class="section-1__video-preview__description">
+              <p class="section-1__video-preview__description__text">The harder you work for something, the greater you'll feel when you achieve it.</p>
               <a href="">Watch preview</a>
             </div>
           </div>
