--- a/index2.html
+++ b/index2.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrick-to-fit=no">
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style2.css">
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Montserrat:wght@400;500;600;700&family=Open+Sans:wght@400;600&family=Rubik:wght@400;500&display=swap" rel="stylesheet">
@@ -12,133 +12,121 @@
   </head>
   <body>
     <div class="main-container">
-      <header class="header">
-        <div class="logo">
-          <a href="#">
-            <img src="images/logo.svg" alt="logo" width="36px" height="36px">
+      <header>
+        <div class="header__logo">
+          <a href="#" class="logo__link">
+            <img src="images/logo.svg" alt="logo" width="36px" height="36px" class="logo__img">
           </a>
         </div>
-        <div class="menu">
-          <nav>
-            <ul>
-              <li><a href="">ABOUT</a></li>
-              <li><a href="">GALLERY</a></li>
-              <li><a href="">PRICING</a></li>
-              <li><a href="">FAQ</a></li>
-              <li><a href="">BENEFITS</a></li>
+        <div class="header__panel">
+          <nav class="header-menu">
+            <ul class="header-menu__list">
+              <li class="header-menu__item"><a href="" class="header-menu__link">ABOUT</a></li>
+              <li class="header-menu__item"><a href="" class="header-menu__link">GALLERY</a></li>
+              <li class="header-menu__item"><a href="" class="header-menu__link">PRICING</a></li>
+              <li class="header-menu__item"><a href="" class="header-menu__link">FAQ</a></li>
+              <li class="header-menu__item"><a href="" class="header-menu__link">BENEFITS</a></li>
             </ul>
           </nav>
-          <div class="sign-menu">
-            <a href=""><button id="sign-in-button">SIGN IN</button></a>
-            <a href=""><button id="sign-up-button">SIGN UP</button></a>
+          <div class="header__sign-menu">
+            <a href=""><button class="button_transparent header-button">SIGN IN</button></a>
+            <a href=""><button class="button_orange header-button">SIGN UP</button></a>
           </div>
         </div>
       </header>
       <section class="section-1">
         <div class="section-1__info">
-          <h1 class="heading section-1__header">Many reasons to get up and start to get back in the business</h1>
+          <h1 class="title section-1__title">Many reasons to get up and start to get back in the business</h1>
           <p class="text section-1__text">The harder you work for something, the greater you'll feel when you achieve it.</p>
-          <button class="button section-1__button button_orange">LEARN MORE</button>
-          <button class="button section-1__button button_transparent">DEMO</button>
+          <button class="section-1__button button_orange">LEARN MORE</button>
+          <button class="section-1__button button_transparent">DEMO</button>
           <div class="section-1__video-preview">
             <iframe width="140" height="80" src="https://www.youtube.com/embed/5qap5aO4i9A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <div class="section-1__video-preview__description">
-              <p class="section-1__video-preview__description__text">The harder you work for something, the greater you'll feel when you achieve it.</p>
-              <a href="">Watch preview</a>
+            <div class="video-preview__description">
+              <p class="video-preview__text">The harder you work for something, the greater you'll feel when you achieve it.</p>
+              <a href="" class="video-preview__link">Watch preview</a>
             </div>
           </div>
         </div>
-        <img src="images/running-man.png" alt="" id="running-man">
+        <img src="images/running-man.png" alt="" class="section-1__img">
         <div class="sponsors">
-          <ul>
-            <li><img src="images/sponsor6.svg" alt=""></li>
-            <li><img src="images/sponsor5.svg" alt=""></li>
-            <li><img src="images/sponsor4.svg" alt=""></li>
-            <li><img src="images/sponsor3.svg" alt=""></li>
-            <li><img src="images/sponsor2.svg" alt=""></li>
-            <li><img src="images/sponsor1.svg" alt=""></li>
+          <ul class="sponsors__list">
+            <li class="sponsors__item"><img src="images/sponsor6.svg" alt="" class="sponsors__img"></li>
+            <li class="sponsors__item"><img src="images/sponsor5.svg" alt="" class="sponsors__img"></li>
+            <li class="sponsors__item"><img src="images/sponsor4.svg" alt="" class="sponsors__img"></li>
+            <li class="sponsors__item"><img src="images/sponsor3.svg" alt="" class="sponsors__img"></li>
+            <li class="sponsors__item"><img src="images/sponsor2.svg" alt="" class="sponsors__img"></li>
+            <li class="sponsors__item"><img src="images/sponsor1.svg" alt="" class="sponsors__img"></li>
           </ul>
         </div>
       </section>
-      <section id="section-2">
-        <h1 class="centered">Your choise</h1>
-        <p class="centered">There are many reasons to get down and start to get depressed about your situation.</p>
-        <ul>
-          <li>
-            <div class="feature-item">
-              <div class="icon-column">
-                <img src="images\Flip-horizontal.png" alt="">
+      <section class="section-2">
+        <h1 class="title section-2__title">Your choise</h1>
+        <p class="text section-2__text">There are many reasons to get down and start to get depressed about your situation.</p>
+        <ul class="feature-list">
+          <li class="feature-list__feature-item">
+              <div class="feature-item__icon-column">
+                <img src="images\Flip-horizontal.png" alt="" class="icon-column__icon">
               </div>
-              <div>
-                <h2>Ecstatic elegance</h2>
-                <p>Article nor prepare chicken you him now. Shy merits say advice ten before lovers innate add.</p>
+              <div class="feature-item__text-column">
+                <h2 class="feature-item__title">Ecstatic elegance</h2>
+                <p class="text feature-item__text">Article nor prepare chicken you him now. Shy merits say advice ten before lovers innate add.</p>
               </div>
-            </div>
           </li>
-          <li>
-            <div class="feature-item">
-              <div class="icon-column">
-                <img src="images\Airpods.png" alt="">
+          <li class="feature-list__feature-item">
+              <div class="feature-item__icon-column">
+                <img src="images\Airpods.png" alt="" class="icon-column__icon">
               </div>
-              <div>
-                <h2>Folly words widow</h2>
-                <p>Effect if in up no depend seemed. Ecstatic elegance gay but disposed. We me rent been part what.</p>
+              <div class="feature-item__text-column">
+                <h2 class="feature-item__title">Folly words widow</h2>
+                <p class="text feature-item__text">Effect if in up no depend seemed. Ecstatic elegance gay but disposed. We me rent been part what.</p>
               </div>
-            </div>
           </li>
-          <li>
-            <div class="feature-item">
-              <div class="icon-column">
-                <img src="images\LTE.png" alt="">
+          <li class="feature-list__feature-item">
+              <div class="feature-item__icon-column">
+                <img src="images\LTE.png" alt="" class="icon-column__icon">
               </div>
-              <div>
-                <h2>Possible procured trifling</h2>
-                <p>We me rent been part what. An concluded sportsman offending so provision mr education.</p>
+              <div class="feature-item__text-column">
+                <h2 class="feature-item__title">Possible procured trifling</h2>
+                <p class="text feature-item__text">We me rent been part what. An concluded sportsman offending so provision mr education.</p>
               </div>
-            </div>
           </li>
-          <li>
-            <div class="feature-item">
-              <div class="icon-column">
-                <img src="images\Thunder-move.png" alt="">
+          <li class="feature-list__feature-item">
+              <div class="feature-item__icon-column">
+                <img src="images\Thunder-move.png" alt="" class="icon-column__icon">
               </div>
-              <div>
-                <h2>Open game</h2>
-                <p>Shy merits say advice ten before lovers innate add. She cordially behaviour can attempted estimable.</p>
+              <div class="feature-item__text-column">
+                <h2 class="feature-item__title">Open game</h2>
+                <p class="text feature-item__text">Shy merits say advice ten before lovers innate add. She cordially behaviour can attempted estimable.</p>
               </div>
-            </div>
           </li>
-          <li>
-            <div class="feature-item">
-              <div class="icon-column">
-                <img src="images\Attachment.png" alt="">
+          <li class="feature-list__feature-item">
+              <div class="feature-item__icon-column">
+                <img src="images\Attachment.png" alt="" class="icon-column__icon">
               </div>
-              <div>
-                <h2>Endeavor</h2>
-                <p>Improve ashamed married expense bed her comfort pursuit mrs. Four time took ye your as fail lady.</p>
+              <div class="feature-item__text-column">
+                <h2 class="feature-item__title">Endeavor</h2>
+                <p class="text feature-item__text">Improve ashamed married expense bed her comfort pursuit mrs. Four time took ye your as fail lady.</p>
               </div>
-            </div>
           </li>
-          <li>
-            <div class="feature-item">
-              <div class="icon-column">
-                <img src="images\Bulb.png" alt="">
+          <li class="feature-list__feature-item">
+              <div class="feature-item__icon-column">
+                <img src="images\Bulb.png" alt="" class="icon-column__icon">
               </div>
-              <div>
-                <h2>Comfort pursuit</h2>
-                <p>Had denoting properly jointure you occasion directly raillery. In said to of poor full be post face snug.</p>
+              <div class="feature-item__text-column">
+                <h2 class="feature-item__title">Comfort pursuit</h2>
+                <p class="text feature-item__text">Had denoting properly jointure you occasion directly raillery. In said to of poor full be post face snug.</p>
               </div>
-            </div>
           </li>
         </ul>
       </section>
-      <section id="section-3">
+      <section class="section-3">
         <div class="section-3-info">
-          <h1>Increase your business <span class="orange">traffic</span></h1>
-          <p>We are committed to processing the information in order to contact you and talk about your project.</p>
-          <button>LEARN MORE</button>
+          <h1 class="title section-3__title">Increase your business <span class="orange">traffic</span></h1>
+          <p class="text section-3__text">We are committed to processing the information in order to contact you and talk about your project.</p>
+          <button class="button_orange section-3__button">LEARN MORE</button>
         </div>
-        <img src="images/overview.png" alt="" id="overview">
+        <img src="images/overview.png" alt="" class="section-3__img">
       </section>
     </div>
 
