a bit more on section 3

--- a/index2.html
+++ b/index2.html
@@ -121,7 +121,7 @@
         </ul>
       </section>
       <section class="section-3">
-        <div class="section-3-info">
+        <div class="section-3__info">
           <h1 class="title section-3__title">Increase your business <span class="orange">traffic</span></h1>
           <p class="text section-3__text">We are committed to processing the information in order to contact you and talk about your project.</p>
           <button class="button_orange section-3__button">LEARN MORE</button>
