--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
           <p class="section-8__text">No spam. Only releases, updates and discounts</p>
         </div>
       </section>
-      <footer>
+      <footer class="footer">
         <div class="social">
           <h1 class="title footer_title orange">ARShakir</h1>
           <ul class="social__list">
@@ -204,6 +204,113 @@
               <a href=""><img src="images\Facebook.png" alt="" class="social__icon"></a>
             </li>
           </ul>
+        </div>
+        <nav class="navigation">
+          <div class="navigation__column">
+            <p class="navigation__title">First</p>
+            <ul class="navigation__list">
+              <li class="navigation__item">
+                <a href="" class="navigation__link">
+                  <p>First page</p>
+                </a>
+              </li>
+              <li class="navigation__item">
+                <a href="" class="navigation__link">
+                  <p>Second page</p>
+                </a>
+              </li>
+              <li class="navigation__item">
+                <a href="" class="navigation__link">
+                  <p>Third page</p>
+                </a>
+              </li>
+              <li class="navigation__item">
+                <a href="" class="navigation__link">
+                  <p>Fourth page</p>
+                </a>
+              </li>
+            </ul>
+          </div>
+          <div class="navigation__column">
+            <p class="navigation__title">Second</p>
+            <ul class="navigation__list">
+              <li class="navigation__item">
+                <a href="" class="navigation__link">
+                  <p>First page</p>
+                </a>
+              </li>
+              <li class="navigation__item">
+                <a href="" class="navigation__link">
+                  <p>Second page</p>
+                </a>
+              </li>
+              <li class="navigation__item">
+                <a href="" class="navigation__link">
+                  <p>Third page</p>
+                </a>
+              </li>
+              <li class="navigation__item">
+                <a href="" class="navigation__link">
+                  <p>Fourth page</p>
+                </a>
+              </li>
+            </ul>
+          </div>
+          <div class="navigation__column">
+            <p class="navigation__title">Third</p>
+            <ul class="navigation__list">
+              <li class="navigation__item">
+                <a href="" class="navigation__link">
+                  <p>First page</p>
+                </a>
+              </li>
+              <li class="navigation__item">
+                <a href="" class="navigation__link">
+                  <p>Second page</p>
+                </a>
+              </li>
+              <li class="navigation__item">
+                <a href="" class="navigation__link">
+                  <p>Third page</p>
+                </a>
+              </li>
+              <li class="navigation__item">
+                <a href="" class="navigation__link">
+                  <p>Fourth page</p>
+                </a>
+              </li>
+            </ul>
+          </div>
+          <div class="navigation__column">
+            <p class="navigation__title">Fourth</p>
+            <ul class="navigation__list">
+              <li class="navigation__item">
+                <a href="" class="navigation__link">
+                  <p>First page</p>
+                </a>
+              </li>
+              <li class="navigation__item">
+                <a href="" class="navigation__link">
+                  <p>Second page</p>
+                </a>
+              </li>
+              <li class="navigation__item">
+                <a href="" class="navigation__link">
+                  <p>Third page</p>
+                </a>
+              </li>
+              <li class="navigation__item">
+                <a href="" class="navigation__link">
+                  <p>Fourth page</p>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+        <div class="copyrights">
+          <a href="" class="copyrights-link">© Copyrights 2021</a>
+          <a href="" class="copyrights-link">Privacy policy</a>
+          <a href="" class="copyrights-link">Terms of service</a>          
         </div>
       </footer>
     </div>
