--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <title>Crypto</title>
   </head>
   <body>
+    <div class="wrapper">
     <div class="main-container">
       <header>
         <div class="header__logo">
@@ -58,6 +59,8 @@
             <li class="sponsors__item"><img src="images/sponsor2.svg" alt="" class="sponsors__img"></li>
             <li class="sponsors__item"><img src="images/sponsor1.svg" alt="" class="sponsors__img"></li>
           </ul>
+          <img src="images\left-rain.png" alt="" class="sponsors__back-image_left">
+          <img src="images\right-rain.png" alt="" class="sponsors__back-image_right">
         </div>
       </section>
       <section class="section-2">
@@ -145,6 +148,7 @@
             <p class="text section-4__text">A Discount Toner Cartridge Is Better Than Ever And You Will Save 50 Or More</p>
           </div>
         </div>
+        <img src="images\comets.png" alt="" class="section-4__back-img">
       </section>
       <section class="section-5">
         <h1 class="title section-5__title title-centered">Create your <span class="orange">next project</span> with startup framework</h1>
@@ -157,6 +161,7 @@
           <button class="button_orange section-6__button">LEARN MORE</button>
         </div>
         <img src="images/Group.png" alt="" class="section-6__img">
+        <img src="images\map.png" alt="" class="section-6__back-img">
       </section>
       <section class="section-7">
         <img src="images/table.png" alt="" class="section-7__img">
@@ -189,6 +194,7 @@
           </form>
           <p class="section-8__text">No spam. Only releases, updates and discounts</p>
         </div>
+        <img src="images\noise.png" alt="" class="section-8__back-img">
       </section>
       <footer class="footer">
         <div class="social">
@@ -310,10 +316,11 @@
         <div class="copyrights">
           <a href="" class="copyrights-link">© Copyrights 2021</a>
           <a href="" class="copyrights-link">Privacy policy</a>
-          <a href="" class="copyrights-link">Terms of service</a>          
+          <a href="" class="copyrights-link">Terms of service</a>
         </div>
+        <img src="images\circles.png" alt="" class="footer__back-img">
       </footer>
     </div>
-
+   </div>
   </body>
 </html>
