--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
       </section>
       <footer class="footer">
         <div class="social">
-          <h1 class="title footer_title orange">ARShakir</h1>
+          <h1 class="title footer_title orange">Lera, Mascha (and design by ARShakir)</h1>
           <ul class="social__list">
             <li class="social__item">
               <a href=""><img src="images\Google.png" alt="" class="social__icon"></a>
