added links to buttons

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
         <div class="section-1__info">
           <h1 class="title section-1__title">Many reasons to get up and start to get back in the business</h1>
           <p class="text section-1__text">The harder you work for something, the greater you'll feel when you achieve it.</p>
-          <button class="section-1__button button_orange">LEARN MORE</button>
-          <button class="section-1__button button_transparent">DEMO</button>
+          <a href=""><button class="section-1__button button_orange">LEARN MORE</button></a>
+          <a href=""><button class="section-1__button button_transparent">DEMO</button></a>
           <div class="section-1__video-preview">
             <iframe width="140" height="80" src="https://www.youtube.com/embed/5qap5aO4i9A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <div class="video-preview__description">
@@ -127,7 +127,7 @@
         <div class="section-3__info">
           <h1 class="title section-3__title">Increase your business <span class="orange">traffic</span></h1>
           <p class="text section-3__text">We are committed to processing the information in order to contact you and talk about your project.</p>
-          <button class="button_orange section-3__button">LEARN MORE</button>
+          <a href=""><button class="button_orange section-3__button">LEARN MORE</button></a>
         </div>
         <img src="images/overview.png" alt="" class="section-3__img">
       </section>
@@ -152,13 +152,13 @@
       </section>
       <section class="section-5">
         <h1 class="title section-5__title title-centered">Create your <span class="orange">next project</span> with startup framework</h1>
-        <button class="section-5__button button_orange">GET STARTED</button>
+        <a href=""><button class="section-5__button button_orange">GET STARTED</button></a>
       </section>
       <section class="section-6">
         <div class="section-6__info">
           <h1 class="title section-6__title">Invest property for better <span class="orange">business</span></h1>
           <p class="text section-6__text">We are committed to processing the information in order to contact you and talk about your project.</p>
-          <button class="button_orange section-6__button">LEARN MORE</button>
+          <a href=""><button class="button_orange section-6__button">LEARN MORE</button></a>
         </div>
         <img src="images/Group.png" alt="" class="section-6__img">
         <img src="images\map.png" alt="" class="section-6__back-img">
