--- a/index.html
+++ b/index.html
@@ -30,8 +30,12 @@
             </ul>
           </nav>
           <div class="header__sign-menu">
-            <a href=""><button class="button_transparent header-button">SIGN IN</button></a>
-            <a href=""><button class="button_orange header-button">SIGN UP</button></a>
+            <form action="login.html" class="redirect-form">
+               <button class="button_transparent header-button">SIGN IN</button>
+            </form>
+            <form action="login.html" class="redirect-form">
+               <button class="button_orange header-button">SIGN UP</button>
+            </form>
           </div>
         </div>
       </header>
