--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           </nav>
           <div class="header__sign-menu">
             <form action="login.html" class="redirect-form">
-               <button class="button_transparent header-button">SIGN IN</button>
+               <button class="button_transparent header-button">LOGIN</button>
             </form>
             <form action="login.html" class="redirect-form">
                <button class="button_orange header-button">SIGN UP</button>
@@ -156,7 +156,10 @@
       </section>
       <section class="section-5">
         <h1 class="title section-5__title title-centered">Create your <span class="orange">next project</span> with startup framework</h1>
-        <a href=""><button class="section-5__button button_orange">GET STARTED</button></a>
+        <div>
+          <a href=""><button class="section-5__button button_orange">GET STARTED</button></a>
+        </div>
+        <img src="images\spheres.png" alt="" class="section-5__back-img">
       </section>
       <section class="section-6">
         <div class="section-6__info">
